# rusty-sticker

./: Cargo.toml  README.md
src/: logger.rs  main.rs
src/utils/: hash.rs  logger.rs  mod.rs
