[package]
name = "rusty-sticker"
version = "0.0.0"
authors = [ "Tatsuhiro Aoshima <hiro4bbh@gmail.com>" ]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[dependencies]
env_logger = "*"
fnv = "*"
getopts = "*"
log = "*"
