[package]
name = "rusty-sticker"
version = "0.0.0"
authors = [ "Tatsuhiro Aoshima <hiro4bbh@gmail.com>" ]

[[bin]]
name = "rusty-sticker-nearest"
path = "src/bin/main_nearest.rs"

[[bin]]
name = "rusty-sticker-benchmarks"
path = "src/bin/main_benchmarks.rs"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[dependencies]
getopts = "*"
rand = "*"
time = "*"
